Upgrade deprecated runtime nodejs8.10

--- a/tests/integration/testdata/package/aws-lambda-function.yaml
+++ b/tests/integration/testdata/package/aws-lambda-function.yaml
@@ -12,5 +12,5 @@ Resources:
           - "LambdaExecutionRole"
           - "Arn"
       Code: "."
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: 25
