--- a/tests/integration/testdata/package/aws-serverless-layerversion.yaml
+++ b/tests/integration/testdata/package/aws-serverless-layerversion.yaml
@@ -11,6 +11,6 @@ Resources:
       ContentUri: "."
       CompatibleRuntimes:
         - nodejs6.10
-        - nodejs8.10
+        - nodejs10.x
       LicenseInfo: 'Available under the MIT-0 license.'
       RetentionPolicy: Retain
