--- a/tests/smoke/templates/sar/acloudguru-alexadevs-triviaskill-template.yaml
+++ b/tests/smoke/templates/sar/acloudguru-alexadevs-triviaskill-template.yaml
@@ -9,7 +9,7 @@ Resources:
         Key: f8b0837c-e68a-41d5-ab0a-13b1071b7c56
       Handler: index.handler
       Description: Demonstrate a basic trivia skill built with the ASK NodeJS SDK
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Events:
         AlexaSkillEvent:
           Type: AlexaSkill
