--- a/tests/smoke/templates/sar/api-gateway-authorizer-nodejs-template.yaml
+++ b/tests/smoke/templates/sar/api-gateway-authorizer-nodejs-template.yaml
@@ -23,6 +23,6 @@ Resources:
       CodeUri:
         Bucket: <%REPO_BUCKET%>
         Key: e52b633b-f6c5-481b-acbc-b0d94aac32cb
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       MemorySize: 256
 Transform: AWS::Serverless-2016-10-31
