--- a/tests/smoke/templates/sar/s3-get-object-template.yaml
+++ b/tests/smoke/templates/sar/s3-get-object-template.yaml
@@ -10,7 +10,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Handler: index.handler
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       CodeUri:
         Bucket: <%REPO_BUCKET%>
         Key: 56e25b67-d55d-4343-b672-8313fd6461cb
