--- a/tests/smoke/templates/sar/helloWorldLex-template.yaml
+++ b/tests/smoke/templates/sar/helloWorldLex-template.yaml
@@ -8,5 +8,5 @@ Resources:
         Bucket: <%REPO_BUCKET%>
         Key: 1831d44b-8ccb-4610-b4f2-1ee88282bb42
       Handler: lambda.handler
-      Runtime: nodejs6.10
+      Runtime: nodejs10.x
 Description: A hello world application for a Lex based chatbot
