--- a/tests/smoke/templates/sar/signalfx-lambda-example-nodejs-template.yaml
+++ b/tests/smoke/templates/sar/signalfx-lambda-example-nodejs-template.yaml
@@ -15,5 +15,5 @@ Resources:
           SIGNALFX_AUTH_TOKEN:
             Ref: SignalFxAuthToken
       Handler: handler.handler
-      Runtime: nodejs6.10
+      Runtime: nodejs10.x
 Transform: AWS::Serverless-2016-10-31
