--- a/appveyor-windows-build-go.yml
+++ b/appveyor-windows-build-go.yml
@@ -60,6 +60,7 @@ install:
     # Check Go Install
     - "SET PATH=c:\\Go\\bin;%PATH%"
     - "echo %PATH%"
+    - "dir c:\\Go\\bin"
     - "go version"
     - "go env"
 
