--- a/appveyor-windows-build-go.yml
+++ b/appveyor-windows-build-go.yml
@@ -1,11 +1,13 @@
 version: 1.0.{build}
-image: Windows Server 2019
+image: Visual Study 2017
 build: off
 
 # Change the clone folder to somewhere in "D:\" because this is shared by default with Docker. We need this to mount folders.
 clone_folder: D:\source
 
 environment:
+  GOPATH: c:\gopath
+  GOVERSION: 1.13
   AWS_DEFAULT_REGION: us-east-1
   SAM_CLI_DEV: 1
   APPVEYOR_CI_OVERRIDE: 1
@@ -57,9 +59,9 @@ install:
     - ps: Switch-DockerLinux
 
     # Install Go
+    - rmdir c:\go /s /q
     - "choco install golang"
     - "choco install bzr"
-    - "choco install dep"
     - setx PATH "C:\go\bin;C:\gopath\bin;C:\Program Files (x86)\Bazaar\;C:\Program Files\Mercurial;%PATH%;"
     - "go version"
     - "go env"
