check: does python3.8 exist on the windows appveyor image?

--- a/appveyor-windows-build-python.yml
+++ b/appveyor-windows-build-python.yml
@@ -40,6 +40,8 @@ install:
     - "echo %PYTHON_HOME%"
     - "echo %PATH%"
     - "python --version"
+    # Check if python3.8 exists on the image
+    - "C:\\Python38-x64\\python.exe --version"
 
     # Upgrade setuptools, wheel and virtualenv
     - "python -m pip install --upgrade setuptools wheel virtualenv"
