--- a/tests/integration/testdata/invoke/template.yml
+++ b/tests/integration/testdata/invoke/template.yml
@@ -14,6 +14,10 @@ Parameters:
       Default: "5"
       Type: Number
 
+  EmptyDefaultParameter:
+    Type: String
+    Default: ""
+
 Resources:
   HelloWorldServerlessFunction:
     Type: AWS::Serverless::Function
@@ -125,6 +129,7 @@ Resources:
           URLSuffix: !Ref "AWS::URLSuffix"
           Timeout: !Ref DefaultTimeout
           MyRuntimeVersion: !Ref MyRuntimeVersion
+          EmptyDefaultParameter: !Ref EmptyDefaultParameter
 
   TimeoutFunctionWithStringParameter:
     Type: AWS::Serverless::Function
