feat: ruby2.7 support in AWS SAM CLI
Why is this change necessary?

* To support ruby2.7 runtime in AWS SAM CLI.

How does it address the issue?

* `sam init`, `sam build` , `sam local` are all supported for ruby2.7

What side effects does this change have?

* None

--- a/samcli/lib/init/templates/cookiecutter-aws-sam-hello-ruby/{{cookiecutter.project_name}}/template.yaml
+++ b/samcli/lib/init/templates/cookiecutter-aws-sam-hello-ruby/{{cookiecutter.project_name}}/template.yaml
@@ -16,7 +16,7 @@ Resources:
     Properties:
       CodeUri: hello_world/
       Handler: app.lambda_handler
-      Runtime: ruby2.5
+      Runtime: {{ cookiecutter.runtime }}
       Events:
         HelloWorld:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
