--- a/appveyor.yml
+++ b/appveyor.yml
@@ -124,6 +124,7 @@ for:
 #      - "pytest --cov samcli --cov-report term-missing --cov-fail-under 95 tests/unit"
 #      - "pylint --rcfile .pylintrc samcli"
 #      - "pytest -n 4 tests/functional"
+#      - sh: curl -sflL 'https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-ssh.sh' | bash -e -
 
       # Runs only in Linux
 #      - sh: "pytest -vv tests/integration/buildcmd"
@@ -137,6 +138,7 @@ for:
 #      - sh: "pytest -vv tests/integration/publish"
 #      - sh: "pytest -vv tests/regression/telemetry"
 #      - sh: "/tmp/black --check setup.py tests samcli scripts"
+#      - sh: "sleep 60m"
 
       # Set JAVA_HOME to java11
       - sh: "JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64"
