--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ environment:
   matrix:
 
     - PYTHON_HOME: "C:\\Python36-x64"
-      PYTHON_VERSION: '3.6.9'
+      PYTHON_VERSION: '3.6.10'
       PYTHON_ARCH: '64'
       NOSE_PARAMETERIZED_NO_WARN: 1
       INSTALL_PY_37_PIP: 1
@@ -18,7 +18,7 @@ environment:
       AWS_S3: 'AWS_S3_36'
 
     - PYTHON_HOME: "C:\\Python37-x64"
-      PYTHON_VERSION: '3.7.4'
+      PYTHON_VERSION: '3.7.5'
       PYTHON_ARCH: '64'
       RUN_SMOKE: 1
       NOSE_PARAMETERIZED_NO_WARN: 1
@@ -27,7 +27,7 @@ environment:
       AWS_S3: 'AWS_S3_37'
 
     - PYTHON_HOME: "C:\\Python38-x64"
-      PYTHON_VERSION: '3.8.0'
+      PYTHON_VERSION: '3.8.2'
       PYTHON_ARCH: '64'
       RUN_SMOKE: 1
       NOSE_PARAMETERIZED_NO_WARN: 1
@@ -80,6 +80,9 @@ for:
         - image: Ubuntu
 
     install:
+      - sh: "gvm use go1.13"
+      - sh: "echo $PATH"
+      - sh: "ls /usr/"
       - sh: "JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64"
       - sh: "PATH=$JAVA_HOME/bin:$PATH"
       - sh: "source ${HOME}/venv${PYTHON_VERSION}/bin/activate"
