--- a/tests/functional/commands/validate/lib/models/api_with_basic_custom_domain_http.yaml
+++ b/tests/functional/commands/validate/lib/models/api_with_basic_custom_domain_http.yaml
@@ -1,11 +1,11 @@
 Parameters:
-  MyDomainName: 
+  MyDomainName:
     Type: String
-    Default: sam-v2-regional-test.com
+    Default: sam-example.com
 
-  MyDomainCert: 
+  MyDomainCert:
     Type: String
-    Default: arn:aws:acm:us-east-1:551213647843:certificate/6c911401-620d-4d41-b89e-366c238bb2f3
+    Default: arn:aws:acm:us-east-1:123455353535:certificate/6c911401-620d-4d41-b89e-366c238bb2f3
 
 Globals:
   HttpApi:
@@ -15,11 +15,11 @@ Globals:
       EndpointConfiguration: REGIONAL
       BasePath: ["/basic", "/begin-here"]
       Route53:
-        HostedZoneName: sam-v2-regional-test.com.
+        HostedZoneName: sam-example.com.
 
 
 Resources:
-  HttpApiFunction: 
+  HttpApiFunction:
     Type: AWS::Serverless::Function
     Properties:
       InlineCode: |
@@ -43,7 +43,7 @@ Resources:
           Type: HttpApi
           Properties:
             ApiId: !Ref MyApi
-  
+
   MyApi:
     Type: AWS::Serverless::HttpApi
     Properties:
