--- a/tests/functional/commands/validate/lib/models/implicit_http_api.yaml
+++ b/tests/functional/commands/validate/lib/models/implicit_http_api.yaml
@@ -1,5 +1,5 @@
 Resources:
-  HttpApiFunction: 
+  HttpApiFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: s3://sam-demo-bucket/todo_list.zip
@@ -15,7 +15,7 @@ Resources:
         SimpleCase:
           Type: HttpApi
 
-  HttpApiFunction2: 
+  HttpApiFunction2:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: s3://sam-demo-bucket/todo_list.zip
@@ -28,3 +28,8 @@ Resources:
           Properties:
             Path: /basic2
             Method: post
+        PathParameters:
+          Type: HttpApi
+          Properties:
+            Path: /get/{something}/with/{params}
+            Method: POST
