fix(build): Do not treat urls as local paths

--- a/tests/integration/testdata/buildcmd/template.yaml
+++ b/tests/integration/testdata/buildcmd/template.yaml
@@ -29,3 +29,8 @@ Resources:
     Properties:
       Command:
         ScriptLocation: SomeRelativePath
+
+  ExampleNestedStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: https://s3.amazonaws.com/examplebucket/exampletemplate.yml
