feat(invoke): Allow invoking with function name (#1215)

--- a/tests/integration/testdata/invoke/template.yml
+++ b/tests/integration/testdata/invoke/template.yml
@@ -139,3 +139,18 @@ Resources:
       CodeUri: .
       Timeout:
         Ref: StringValueTimeout
+
+  FunctionWithFunctionNameOverride:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: func-name-override
+      Handler: main.handler
+      Runtime: python3.6
+
+  EchoFunctionWithFunctionNameOverride:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: echo-func-name-override
+      Handler: main.echo_event
+      Runtime: python3.6
+      CodeUri: .
