fix(start-api): Allow invoking when a function has a FunctionName

--- a/tests/integration/testdata/start_api/template.yaml
+++ b/tests/integration/testdata/start_api/template.yaml
@@ -16,6 +16,7 @@ Resources:
     Properties:
       Handler: main.handler
       Runtime: python3.6
+      FunctionName: customname
       CodeUri: .
       Timeout: 600
       Events:
