fix: Use LogicalId for Env Vars fetching within the Env Var file

--- a/tests/integration/testdata/invoke/template.yml
+++ b/tests/integration/testdata/invoke/template.yml
@@ -58,7 +58,19 @@ Resources:
       CodeUri: .
       Environment:
         Variables:
-          CustomEnvVar: "MyVar"
+          CustomEnvVar: "MyOtherVar"
+      Timeout: 600
+
+  EchoCustomEnvVarWithFunctionNameDefinedFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: customname
+      Handler: main.custom_env_var_echo_hanler
+      Runtime: python3.6
+      CodeUri: .
+      Environment:
+        Variables:
+          CustomEnvVar: "MyOtherVar"
       Timeout: 600
 
   WriteToStderrFunction:
