--- a/tests/integration/testdata/invoke/template.yml
+++ b/tests/integration/testdata/invoke/template.yml
@@ -18,6 +18,10 @@ Parameters:
     Type: String
     Default: ""
 
+  FunctionNameParam:
+    Type: String
+    Default: "MyReallyCoolFunction"
+
 Resources:
   HelloWorldServerlessFunction:
     Type: AWS::Serverless::Function
@@ -50,6 +54,15 @@ Resources:
       CodeUri: .
       Timeout: 600
 
+  HelloWorldServerlessWithFunctionNameRefFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: !Ref FunctionNameParam
+      Handler: main.handler
+      Runtime: python3.6
+      CodeUri: .
+      Timeout: 600
+
   EchoCustomEnvVarFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -58,7 +71,19 @@ Resources:
       CodeUri: .
       Environment:
         Variables:
-          CustomEnvVar: "MyVar"
+          CustomEnvVar: "MyOtherVar"
+      Timeout: 600
+
+  EchoCustomEnvVarWithFunctionNameDefinedFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: customname
+      Handler: main.custom_env_var_echo_hanler
+      Runtime: python3.6
+      CodeUri: .
+      Environment:
+        Variables:
+          CustomEnvVar: "MyOtherVar"
       Timeout: 600
 
   WriteToStderrFunction:
