feat: dotnetcore3.1 support
Why is this change necessary?

* Add support for init, build, local invoke on dotnetcore3.1 runtimes.

--- a/samcli/lib/init/templates/cookiecutter-aws-sam-hello-dotnet/{{cookiecutter.project_name}}/src/HelloWorld/HelloWorld.csproj
+++ b/samcli/lib/init/templates/cookiecutter-aws-sam-hello-dotnet/{{cookiecutter.project_name}}/src/HelloWorld/HelloWorld.csproj
@@ -3,8 +3,10 @@
   <PropertyGroup>
     {%- if cookiecutter.runtime == 'dotnetcore2.0' %}
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    {%- else %}
+    {%- elif cookiecutter.runtime == 'dotnetcore2.1' %}
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    {%- else %}
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     {%- endif %}
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
@@ -15,6 +17,5 @@
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
-  
 </Project>
 
