--- a/samcli/lib/init/templates/cookiecutter-aws-sam-hello-dotnet/{{cookiecutter.project_name}}/template.yaml
+++ b/samcli/lib/init/templates/cookiecutter-aws-sam-hello-dotnet/{{cookiecutter.project_name}}/template.yaml
@@ -16,8 +16,10 @@ Resources:
       Handler: HelloWorld::HelloWorld.Function::FunctionHandler
       {%- if cookiecutter.runtime == 'dotnetcore2.0' %}
       Runtime: {{ cookiecutter.runtime }}
+      {%- elif cookiecutter.runtime == 'dotnetcore2.1' %}
+      Runtime: {{ cookiecutter.runtime }}
       {%- else %}
-      Runtime: dotnetcore2.1
+      Runtime: dotnetcore3.1
       {%- endif %}
       Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
         Variables:
