--- a/samcli/lib/init/templates/cookiecutter-aws-sam-hello-dotnet/{{cookiecutter.project_name}}/test/HelloWorld.Test/HelloWorld.Tests.csproj
+++ b/samcli/lib/init/templates/cookiecutter-aws-sam-hello-dotnet/{{cookiecutter.project_name}}/test/HelloWorld.Test/HelloWorld.Tests.csproj
@@ -3,8 +3,10 @@
   <PropertyGroup>
     {%- if cookiecutter.runtime == 'dotnetcore2.0' %}
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    {%- else %}
+    {%- elif cookiecutter.runtime == 'dotnetcore2.1' %}
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    {%- else %}
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     {%- endif %}
   </PropertyGroup>
 
