--- a/appveyor-windows-build-dotnet.yml
+++ b/appveyor-windows-build-dotnet.yml
@@ -36,6 +36,9 @@ init:
 
 install:
 
+    # Install latest dotnetcore sdk
+    - "choco install dotnetcore-sdk"
+    - "refreshenv"
     # Make sure the temp directory exists for Python to use.
     - ps: "mkdir -Force D:\\tmp"
     - "SET PATH=%PYTHON_HOME%;%PATH%"
