fix: address comments

--- a/tests/integration/testdata/invoke/template-pseudo-params.yaml
+++ b/tests/integration/testdata/invoke/template-pseudo-params.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: Run intrinsics and fill in pseudo parameters first.
+Description: Run intrinsics and fill in pseudo parameters first, ApplicationIds used are aws sample app arns.
 
 Mappings:
   MappingExample:
