Set Custom Basedirs on Windows
Windows file permissions on AppVeyor require we put mounted files under D:\source

--- a/appveyor-windows-build-go.yml
+++ b/appveyor-windows-build-go.yml
@@ -67,6 +67,8 @@ install:
     - "echo %PATH%"
 
 test_script:
+    - "SET SAM_RAPID_BASEDIR=D:\\source\\rapid"
+    - "SET SAM_GO_BOOTSTRAP_BASEDIR=D:\\source\\go-bootstrap"
     # Reactivate virtualenv before running tests
     - "venv\\Scripts\\activate"
     - "docker system prune -a -f"
