--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -74,6 +74,8 @@ install:
     - "echo %PATH%"
 
 test_script:
+    - "SET SAM_RAPID_BASEDIR=D:\\source\\rapid"
+    - "SET SAM_GO_BOOTSTRAP_BASEDIR=D:\\source\\go-bootstrap"
     # Reactivate virtualenv before running tests
     - "git --version"
     - "venv\\Scripts\\activate"
