--- a/appveyor-windows-build-python.yml
+++ b/appveyor-windows-build-python.yml
@@ -53,10 +53,11 @@ install:
     - "python -m pip install --upgrade setuptools wheel virtualenv"
 
     # Upgrade pip in each python
-    - "python2.7 -m pip install --upgrade pip"
-    - "python3.6 -m pip install --upgrade pip"
-    - "python3.7 -m pip install --upgrade pip"
-    - "python3.8 -m pip install --upgrade pip"
+    - "C:\\Python27-x64\\python.exe -m pip install --upgrade pip"
+    - "C:\\Python36-x64\\python.exe -m pip install --upgrade pip"
+    # python is python3.7
+    - "python -m pip install --upgrade pip"
+    - "C:\\Python38\\python.exe -m pip install --upgrade pip"
 
     # Create new virtual environment with chosen python version and activate it
     - "python -m virtualenv venv"
