Use python2.7 that is further up in the path

--- a/appveyor-windows-build-python.yml
+++ b/appveyor-windows-build-python.yml
@@ -53,7 +53,7 @@ install:
     - "python -m pip install --upgrade setuptools wheel virtualenv"
 
     # Upgrade pip in each python
-    - "C:\\Python27-x64\\python.exe -m pip install --upgrade pip"
+    - "C:\Python27\\python.exe -m pip install --upgrade pip"
     - "C:\\Python36-x64\\python.exe -m pip install --upgrade pip"
     # python is python3.7
     - "python -m pip install --upgrade pip"
