--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -90,7 +90,7 @@ test_script:
     - ps: Switch-DockerLinux
     - "venv\\Scripts\\activate"
     - "docker system prune -a -f"
-    - "pytest -vv tests/integration"
+    - "pytest -vv tests/integration/local/invoke/test_integrations_cli.py"
 
 # Uncomment for RDP
 # on_finish:
