--- a/appveyor-windows-build-java-ruby-inprocess.yml
+++ b/appveyor-windows-build-java-ruby-inprocess.yml
@@ -26,6 +26,7 @@ install:
     - "java -version"
     - "gradle -v"
     - "mvn --version"
+    - "docker --version"
 
     # setup Ruby dependencies
     - "set PATH=C:\\Ruby25-x64\\bin;%PATH%"
