Changed docker --version to version

--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -39,7 +39,8 @@ cache:
   - C:\ProgramData\chocolatey\lib -> appveyor.yml
 
 install:
-
+    - "docker version"
+    
     # setup make
     - "choco install make"
 
