--- a/appveyor-windows-build-java-ruby-inprocess.yml
+++ b/appveyor-windows-build-java-ruby-inprocess.yml
@@ -16,7 +16,7 @@ environment:
   APPVEYOR_CONSOLE_DISABLE_PTY: true
 
 install:
-
+    - "docker version"
     # setup Java, Maven and Gradle
     - "refreshenv"
     - "choco install maven -y --force"
@@ -26,7 +26,6 @@ install:
     - "java -version"
     - "gradle -v"
     - "mvn --version"
-    - "docker --version"
 
     # setup Ruby dependencies
     - "set PATH=C:\\Ruby25-x64\\bin;%PATH%"
