--- a/appveyor-windows-build-java-ruby-inprocess.yml
+++ b/appveyor-windows-build-java-ruby-inprocess.yml
@@ -16,7 +16,7 @@ environment:
   APPVEYOR_CONSOLE_DISABLE_PTY: true
 
 install:
-    - "docker version"
+    - "docker info"
     
     # setup Java, Maven and Gradle
     - "refreshenv"
@@ -47,10 +47,6 @@ install:
 
     # Actually install SAM CLI's dependencies
     - "pip install -e \".[dev]\""
-
-    # Switch to Docker Linux containers
-    - ps: Switch-DockerLinux
-    - "docker version"
 
 test_script:
     # Reactivate virtualenv before running tests
