--- a/appveyor.yml
+++ b/appveyor.yml
@@ -137,7 +137,17 @@ for:
       - "pytest -n 4 tests/functional"
 
       # Runs only in Linux
-      - sh: "pytest -vv tests/integration"
+      - sh: "pytest -vv tests/integration/buildcmd"
+      - sh: "docker system prune -a"
+      - sh: "pytest -vv tests/integration/deploy"
+      - sh: "docker system prune -a"
+      - sh: "pytest -vv tests/integration/init"
+      - sh: "docker system prune -a"
+      - sh: "pytest -vv tests/integration/local"
+      - sh: "docker system prune -a"
+      - sh: "pytest -vv tests/integration/package"
+      - sh: "pytest -vv tests/integration/publish"
+      - sh: "pytest -vv tests/integration/telemetry"
       - sh: "pytest -vv tests/regression"
       - sh: "/tmp/black --check setup.py tests samcli"
 
