Revert "Added Duration for Tests"
This reverts commit 78d4ef122e0ff6736cf6322b3b0f5166481a197c.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -148,7 +148,7 @@ for:
       - sh: "date +\"%T\""
 
       # Runs only in Linux
-      - sh: "pytest -vv --durations=0 tests/integration"
+      - sh: "pytest -vv tests/integration"
       - sh: "date +\"%T\""
       - sh: "pytest -vv tests/regression"
       - sh: "date +\"%T\""
