Added docker pull Speed Test

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -84,6 +84,9 @@ for:
         - image: Ubuntu
 
     install:
+      - sh: "date +\"%T\""
+      - sh: "docker pull amazon/aws-sam-cli-build-image-provided.al2"
+      - sh: "date +\"%T\""
       - sh: "gvm use go1.13"
       - sh: "echo $PATH"
       - sh: "ls /usr/"
