Updated eventmapping to support sqs customized body

--- a/samcli/lib/generated_sample_events/event-mapping.json
+++ b/samcli/lib/generated_sample_events/event-mapping.json
@@ -968,6 +968,15 @@
         },
         "queue-name": {
           "default": "MyQueue"
+        },
+        "body": {
+          "default": "Hello from SQS!",
+          "children": [{
+            "md5-of-body": {
+              "type": "string",
+              "hash": "md5"
+            }
+          }]
         }
       }
     }
