feat: Add support for customized message body in generated SQS message (#2209)
* Updated eventmapping to support sqs customized body

* Refactored and added support for more transformation

* Updated Events().hash() to raise ValueError for unsupported hashing_scheme

--- a/samcli/lib/generated_sample_events/event-mapping.json
+++ b/samcli/lib/generated_sample_events/event-mapping.json
@@ -968,6 +968,15 @@
         },
         "queue-name": {
           "default": "MyQueue"
+        },
+        "body": {
+          "default": "Hello from SQS!",
+          "children": {
+            "md5_of_body": {
+              "type": "string",
+              "hashing": "md5"
+            }
+          }
         }
       }
     }
