De-duplicated builds
- Changed to identify each build as unique for custom Makefile builds
- Added unit tests related to this change
- Added integration tests related to this change

--- a/tests/integration/testdata/buildcmd/dedup-functions-template.yaml
+++ b/tests/integration/testdata/buildcmd/dedup-functions-template.yaml
@@ -67,3 +67,19 @@ Resources:
       CodeUri: Ruby
       Handler: app.second_lambda_handler
       Runtime: ruby2.5
+  HelloWorldPythonProvided:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ProvidedWithMultipleFunctions
+      Handler: first_function.handler
+      Runtime: python3.7
+    Metadata:
+      BuildMethod: makefile
+  HelloMarsPythonProvided:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ProvidedWithMultipleFunctions
+      Handler: second_function.handler
+      Runtime: python3.7
+    Metadata:
+      BuildMethod: makefile
