--- a/tests/integration/testdata/buildcmd/ProvidedWithMultipleFunctions/Makefile
+++ b/tests/integration/testdata/buildcmd/ProvidedWithMultipleFunctions/Makefile
@@ -1,10 +1,10 @@
-build-HelloWorldPythonProvided:
+build-HelloWorldFunction:
 	cp *.py $(ARTIFACTS_DIR)
 	cp empty-requirements.txt $(ARTIFACTS_DIR)
 	python -m pip install -r empty-requirements.txt -t $(ARTIFACTS_DIR)
 	rm -rf $(ARTIFACTS_DIR)/bin
 
-build-HelloMarsPythonProvided:
+build-HelloMarsFunction:
 	cp *.py $(ARTIFACTS_DIR)
 	cp requests-requirements.txt $(ARTIFACTS_DIR)
 	python -m pip install -r requests-requirements.txt -t $(ARTIFACTS_DIR)
