--- a/samcli/lib/generated_sample_events/event-mapping.json
+++ b/samcli/lib/generated_sample_events/event-mapping.json
@@ -192,6 +192,13 @@
       }
     }
   },
+  "appsync": {
+    "error": {
+      "filename": "AppSyncDirectResolver",
+      "help": "Generates an AWS AppSync Event",
+      "tags": {}
+    }
+  },
   "batch": {
     "get-job": {
       "filename": "BatchGetJob",
