--- a/samcli/lib/generated_sample_events/event-mapping.json
+++ b/samcli/lib/generated_sample_events/event-mapping.json
@@ -193,7 +193,7 @@
     }
   },
   "appsync": {
-    "error": {
+    "resolver": {
       "filename": "AppSyncDirectResolver",
       "help": "Generates an AWS AppSync Event",
       "tags": {}
