fix HttpApi event V2 route key

--- a/tests/integration/testdata/start_api/cfn-quick-created-http-api-with-default-route.yaml
+++ b/tests/integration/testdata/start_api/cfn-quick-created-http-api-with-default-route.yaml
@@ -7,7 +7,7 @@ Description: 'sam-app
 Resources:
   HelloWorldFunction:
     Properties:
-      Handler: main.handler
+      Handler: main.echo_event_handler
       Code: '.'
       Role:
         Fn::GetAtt:
