--- a/.pylintrc
+++ b/.pylintrc
@@ -17,6 +17,7 @@ persistent=yes
 # List of plugins (as comma separated values of python modules names) to load,
 # usually to register additional checkers.
 load-plugins=
+    pylint.extensions.check_elif, # Else If Used checker
 
 # Use multiple processes to speed up Pylint.
 jobs=4
