Revert "chore: Enable pylint line too long"
This reverts commit fb54504124cf04f163189ed8d02be4fc9663dd16.

--- a/.pylintrc
+++ b/.pylintrc
@@ -75,6 +75,7 @@ disable=
     I0011, # Locally disabling %s
     R0904, # Too many public methods (%s/%s)
     R0914, # Too many local variables (%s/%s)
+    C0301, # Line too long (%s/%s)
     C0415  # Import outside toplevel (%s) Used when an import statement is used anywhere other than the module toplevel. Move this import to the top of the file.
 
 
