--- a/.pylintrc
+++ b/.pylintrc
@@ -65,6 +65,8 @@ disable=
     W0640, # Cell variable %s defined in loop A variable used in a closure is defined in a loop
     I0021, # Useless suppression of %s
     I0020, # Suppressed %s (from line %d)
+    W1618, # import missing `from __future__ import absolute_import` Used when an import is not accompanied by from __future__ import absolute_import (default behaviour in Python 3) This message can’t be emitted when using Python >= 3.0.
+    W1619, # division w/o __future__ statement Used for non-floor division w/o a float literal or from __future__ import division (Python 3 returns a float for int division unconditionally) This message can’t be emitted when using Python >= 3.0.
     R0902, # Too many instance attributes (%s/%s)
     R0903, # Too few public methods (%s/%s)
     W0231, # __init__ method from base class %r is not called
