--- a/appveyor-windows.yml
+++ b/appveyor-windows.yml
@@ -77,6 +77,10 @@ install:
 
 test_script:
     # Reactivate virtualenv before running tests
+    - ps: "
+        If ((Test-Path variable:BY_CANARY) -And (Test-Path variable:DOCKER_USER) -And (Test-Path variable:DOCKER_PASS)){
+          echo Logging in Docker Hub; echo $DOCKER_PASS | docker login --username $DOCKER_USER --password-stdin;
+        }"
     - "git --version"
     - "venv\\Scripts\\activate"
     - "docker system prune -a -f"
