--- a/appveyor.yml
+++ b/appveyor.yml
@@ -79,6 +79,7 @@ for:
       - "venv\\Scripts\\activate"
       - "pytest --cov samcli --cov-report term-missing --cov-fail-under 94 tests/unit"
       - "pylint --rcfile .pylintrc samcli"
+      - "mypy setup.py samcli tests"
       - "pytest -n 4 tests/functional"
 
   - 
@@ -132,6 +133,7 @@ for:
     test_script:
       - "pytest --cov samcli --cov-report term-missing --cov-fail-under 94 tests/unit"
       - "pylint --rcfile .pylintrc samcli"
+      - "mypy setup.py samcli tests"
       - "pytest -n 4 tests/functional"
 
       # Runs only in Linux, logging docker hub when running canary and docker cred is available
