chore: Enable basic mypy typechecking, 2nd round after reverting

--- a/mypy.ini
+++ b/mypy.ini
@@ -54,3 +54,6 @@ ignore_missing_imports=True
 
 [mypy-setuptools]
 ignore_missing_imports=True
+
+[mypy-watchdog,watchdog.*]
+ignore_missing_imports=True
